# cnn-architecture-and-transfer-comparison

./: .gitignore  README.md  confusion_matrix.py  load.py  pyproject.toml  resnet18.py  resnet50-pretrained.py  resnet50.py  tool.py  vgg16.py
