[project]
name = "cnn-architecture-and-transfer-comparison"
version = "0.1.0"
description = "A comparative study of CNN architecture evolution, model depth, and transfer learning effects on CIFAR-10"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision==0.24.0+cu130",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
